change in order and product

--- a/templates/dashboard/order.html
+++ b/templates/dashboard/order.html
@@ -22,29 +22,38 @@
                     <tbody>
                         <tr>
                             <th scope="row">1</th>
-                            <td>Devin</td>
-                            <td>Oscar</td>
-                            <td>@mdo</td>
+                            <td>Headphones</td>
+                            <td>Electronics</td>
+                            <td>5</td>
                             <td>
-                                Broni
+                                Sonia
                             </td>
                         </tr>
                         <tr>
                             <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thorwin</td>
-                            <td>@fat</td>
+                            <td>Rubber</td>
+                            <td>Stationary</td>
+                            <td>20</td>
                             <td>
-                                Kenneth
+                                Razor
                             </td>
                         </tr>
                         <tr>
                             <th scope="row">3</th>
-                            <td>Lang</td>
-                            <td>Harold</td>
-                            <td>@twitter</td>
+                            <td>Dell Laptop</td>
+                            <td>Electronics</td>
+                            <td>2</td>
                             <td>
-                                Cecilia
+                                Vito
+                            </td>
+                        </tr>
+                     <tr>
+                            <th scope="row">4</th>
+                            <td>Bag of flour</td>
+                            <td>Food</td>
+                            <td>9</td>
+                            <td>
+                                Bob
                             </td>
                         </tr>
                     </tbody>
