--- a/templates/dashboard/product.html
+++ b/templates/dashboard/product.html
@@ -45,9 +45,9 @@
                     <tbody>
                         <tr>
                             <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <td>Headphones</td>
+                            <td>Electronics</td>
+                            <td>100</td>
                             <td>
                                 <a class="btn btn-info btn-sm" href="">Edit</a>
                                 <a class="btn btn-danger btn-sm" href="">Delete</a>
@@ -55,9 +55,9 @@
                         </tr>
                         <tr>
                             <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
+                            <td>Dell Laptop</td>
+                            <td>Electronics</td>
+                            <td>90</td>
                             <td>
                                 <a class="btn btn-info btn-sm" href="">Edit</a>
                                 <a class="btn btn-danger btn-sm" href="">Delete</a>
@@ -65,9 +65,19 @@
                         </tr>
                         <tr>
                             <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
+                            <td>Bag of Flour</td>
+                            <td>Food</td>
+                            <td>60</td>
+                            <td>
+                                <a class="btn btn-info btn-sm" href="">Edit</a>
+                                <a class="btn btn-danger btn-sm" href="">Delete</a>
+                            </td>
+                        </tr>
+                      <tr>
+                            <th scope="row">4</th>
+                            <td>Rubber</td>
+                            <td>Stationary</td>
+                            <td>42</td>
                             <td>
                                 <a class="btn btn-info btn-sm" href="">Edit</a>
                                 <a class="btn btn-danger btn-sm" href="">Delete</a>
